Fixed dark mode color palette, added opacity to img to match darkmode

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@
     --accent: #4f46e5;
     --accent-foreground: #f1f5f9;
     --radius: 0.375rem;
+
     /* --background: hsl(346, 100%, 97%);
     --foreground: hsl(347, 5%, 0%);
     --card: hsl(0, 0%, 95%);
@@ -66,27 +67,22 @@
     /* 160px */
 }
 
-.dark {
-    --background: hsl(347, 50%, 5%);
-    --foreground: hsl(347, 5%, 90%);
-    --card: hsl(347, 50%, 0%);
-    --card-foreground: hsl(347, 5%, 90%);
-    --popover: hsl(347, 50%, 5%);
-    --popover-foreground: hsl(347, 5%, 90%);
-    --primary: hsl(347, 77.2%, 49.8%);
-    --primary-foreground: hsl(0, 0%, 100%);
-    --secondary: hsl(347, 30%, 10%);
-    --secondary-foreground: hsl(0, 0%, 100%);
-    --muted: hsl(309, 30%, 15%);
-    --muted-foreground: hsl(347, 5%, 60%);
-    --accent: hsl(309, 30%, 15%);
-    --accent-foreground: hsl(347, 5%, 90%);
-    --destructive: hsl(0, 100%, 30%);
-    --destructive-foreground: hsl(347, 5%, 90%);
-    --border: hsl(347, 30%, 18%);
-    --input: hsl(347, 30%, 18%);
-    --ring: hsl(347, 77.2%, 49.8%);
-    --radius: 0.5rem;
+.dark-mode {
+    --background: #020617;
+    --foreground: #e2e8f0;
+    --card: #0f172a;
+    --card-foreground: #94a3b8;
+    --primary: #e11d48;
+    --primary-foreground: #f1f5f9;
+    --secondary: #be123c;
+    --secondary-foreground: #f1f5f9;
+    --muted: #0f172a;
+    --muted-foreground: #94a3b8;
+    --accent: #4f46e5;
+    --accent-foreground: #f1f5f9;
+    --radius: 0.375rem;
+    --card-button: #020617;
+    --card-button-foreground: #e2e8f0;
 }
 
 * {
@@ -114,6 +110,10 @@ svg {
     display: block;
     max-width: 100%;
     user-select: none;
+}
+
+img {
+    opacity: 0.8;
 }
 
 button {
